# repo-monitor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality-check.yml  security.yml  test-and-coverage.yml
repo_monitor/: app.py  config.py  controller.py  main.py  repository.py  statistics.py  utils.py
repo_monitor/lib/: controller.py  repository.py  statistics.py  utils.py
repo_monitor/models/: config.py  events.py  health.py  repos.py  stats.py
tests/: test_calculate_duration.py  test_calculate_statistics.py  test_datetime_utils.py  test_repository.py  test_url_validation.py
