[project]
name = "repo-monitor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Tesař", email = "michtesar@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.3",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "pydantic-settings>=2.2.1",
    "numpy>=1.26.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.2",
    "mypy>=1.10.0",
    "codespell>=2.2.6",
]
test = [
    "pytest>=8.2.0",
    "pytest-coverage>=0.0",
    "coverage>=7.5.0",
]

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = [
    "build",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache"
]
fix = true
ignore = ["G004", "PGH003", "B008"]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "W",    # Warning
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable,
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PGH",  # pygrep-hooks
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Errors
    "PLW",  # Pylint Warnings
    "RUF",  # Ruff-specific rules
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
disallow_subclassing_any = false
disallow_any_generics = false
disallow_untyped_decorators = false
